--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ addons:
         packages:
             - texlive-full
 
+script:
+    - latexmk -pdf ClassicThesis.tex
+
 notification:
     email:
         recipients:
